# Covstream

./: .gitignore  CHANGELOG.md  Cargo.toml  Covstream.lean  LICENSE  Main.lean  README.md  SECURITY.md  lake-manifest.json  lakefile.lean  lakefile.toml
.github/workflows/: rust_ci.yml
Covstream/: Basic.lean  Contract.lean  ErrorBounds.lean  Examples.lean  FrobeniusBasic.lean  FrobeniusLoss.lean  LedoitWolf.lean  ShrinkageOptimization.lean  Welford.lean
benches/: core_bench.rs
docs/: LAUNCH.md  RUST_API.md
examples/: batch_returns.rs  streaming_covariance.rs  throughput.rs
src/: core.rs  error.rs  kernels.rs  layout.rs  lib.rs  packing.rs  shrinkage.rs  state.rs
tests/: core_basic.rs  core_buffers.rs  core_covariance.rs  core_shrinkage.rs  state_buffers.rs
tests/common/: mod.rs
