[package]
name = "covstream"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-performance streaming covariance and Ledoit-Wolf shrinkage"
repository = ""

[lib]
name = "covstream"
path = "src/lib.rs"

[features]
default = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "core_bench"
harness = false
