[package]
name = "covstream"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Lean-backed fixed-dimension streaming covariance and Ledoit-Wolf shrinkage"
readme = "README.md"
repository = "https://github.com/gratus00/Covstream"
homepage = "https://github.com/gratus00/Covstream"
documentation = "https://docs.rs/covstream"
keywords = ["covariance", "streaming", "finance", "statistics"]
categories = ["science", "mathematics", "algorithms"]
exclude = ["/.github/**", "/target/**", "/.lake/**", "/.codex"]

[lib]
name = "covstream"
path = "src/lib.rs"

[features]
default = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "core_bench"
harness = false

[dependencies]
rayon = "1"
